# scheduled-qat-for-slm

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/lora_qat/: lora_qat_int4.yaml  lora_qat_int8.yaml
configs/ptq/: ptq_int4.yaml  ptq_int8.yaml
configs/scheduled_qat/: scheduled_cosine_int4.yaml  scheduled_cosine_int8.yaml  scheduled_linear_int4.yaml  scheduled_linear_int8.yaml  scheduled_step_int4.yaml  scheduled_step_int8.yaml
configs/standard_qat/: qat_int4.yaml  qat_int8.yaml
notebooks/: 01_baseline.ipynb  02_ptq.ipynb  03_standard_qat.ipynb  04_scheduled_qat.ipynb  04_scheduled_qat_cosine.ipynb  04_scheduled_qat_linear.ipynb  04_scheduled_qat_step.ipynb  05_lora_qat.ipynb  06_export_gguf.ipynb  07_benchmarks.ipynb  README.md
results/: README.md
src/models/: model_wrapper.py
src/quantization/: fake_quantize.py  lora_qat.py  ptq.py  scheduled_qat.py  scheduler.py  standard_qat.py
src/training/: baseline.py  trainer.py
src/utils/: config_loader.py  data_loader.py  export.py  metrics.py
